--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="menu_home">Home </string>
     <string name="menu_favorite">List </string>
     <string name="menu_profile">Profile </string>
+    <string name="judul">Gunung Tanggkuban Perahu</string>
 </resources>
